# google_sheets_rs

./: .gitignore  Cargo.toml  README.md
sheets_app/: Cargo.toml
sheets_app/src/: main.rs
sheets_lib/: Cargo.toml  README.md
sheets_lib/src/: api.rs  cell_range.rs  error.rs  http.rs  lib.rs  range.rs  sheet_info.rs  traits.rs
sheets_lib/src/api/: api_config.rs  http.rs  mod.rs
sheets_lib/src/api/spread_sheet/: create.rs  get.rs  mod.rs  spreadsheet_query_params.rs
sheets_lib/src/model/: batch_update_api.rs  mod.rs  value_range.rs
sheets_lib/src/model/cells/: border.rs  borders.rs  cell_data.rs  cell_format.rs  data_source_formula.rs  data_source_table.rs  data_source_table_column_selection_type.rs  data_validation_rule.rs  horizontal_align_type.rs  hyperlink_display_type.rs  mod.rs  number_format.rs  number_format_type.rs  padding.rs  style_type.rs  text_direction_type.rs  text_format_run.rs  text_rotation.rs  vertical_align_type.rs  wrap_strategy_type.rs
sheets_lib/src/model/metadata/: developer_metadata.rs  developer_metadata_location.rs  developer_metadata_location_type.rs  developer_metadata_visibility_type.rs  dimension_type.rs  mod.rs
sheets_lib/src/model/other/: boolean_condition.rs  color.rs  color_style.rs  condition_type.rs  condition_value.rs  data_execution_error_code_type.rs  data_execution_state_type.rs  data_execution_status.rs  data_source_column.rs  data_source_column_reference.rs  embedded_object_position.rs  error_type.rs  error_value.rs  extended_value.rs  filter_criteria.rs  filter_spec.rs  grid_coordinate.rs  grid_range.rs  liink.rs  (+7 more)
(+62 files in other folders)
