[workspace]
members = [ "google_auth","sheets_lib", "sheets_app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
convert_case = "0.6"
regex = "1.10"
serde_with = "3.8"
