[package]
name = "sheets_appn"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
sheets_lib = { path = "../sheets_lib" }
google_auth = { path = "../google_auth" }
